k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-manager-api
  namespace: task-manager
  labels:
    app: task-manager-api
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    #- host: task-manager.local
    - http:
        paths:
          - path: /task-manager
            pathType: Prefix
            backend:
              service:
                name: task-manager-api
                port:
                  number: 8080
